--- a/submit.html
+++ b/submit.html
@@ -1,23 +1,23 @@
 
 <ul>
 	<li>
-		<a href="#" name="submit">
+		<a href="#" name="submit"></a>
 		<h2>Why don't you have <span class="amazing">$INSERT_AMAZING_SITE_HERE</span> on the searcher?</h2>
-		<h3>If it's related to Agile, I probably didn't know about it or forgot to add. Send me the site link at agilesearcher@vidageek.net</h3>
+		<h3>If it's related to Agile, I probably didn't know about it or forgot to add. Send me the site url (or <a href="http://www.google.com/support/customsearch/bin/answer.py?hl=en&answer=71826" target="_blank">url pattern</a>) at agilesearcher@vidageek.net</h3>
 	</li>
 	<li>
-		<a href="#" name="noise">
+		<a href="#" name="noise"></a>
 		<h2>There is too much noise. Can't you do anything about it?</h2>
 		<h3>Well, there is much less noise than a simple Google Search. But even so there is much more noise than I'd like it to have. Want to help me cleaning up? Send me an email at agilesearcher@vidageek.net</h3>
 	</li>
 	<li>
-		<a href="#" name="contribute">
+		<a href="#" name="contribute"></a>
 		<h2>Hey, this is amazing! How can I contribute?</h2>
 		<h3>You can send me sites, help me filter out bad content, spread the word about this site, donate money or any other thing you think can be useful. As usual, send me an email at agilesearcher@vidageek.net</h3>
 	</li>
 	<li>
-		<a href="#" name="why">
-		<h2>Why did you spent time on this?</h2>
-		<h3>I was creating a new course for <a href="http://www.adaptworks.com.br"> and got really bored from looking for references on Google. I created a <a href="http://www.google.com/cse"> Google Custom Search Engine</a> with a bunch of sites to make my life easier. Since it really worked for me, i bet it can work for some other people too, so why not open it for anyone who wants?</h3>
+		<a href="#" name="why"></a>
+		<h2>Why did you spend time on this?</h2>
+		<h3>I was creating a new course for <a href="http://www.adaptworks.com.br">AdaptWorks</a> and got really bored from looking for references on Google. I created a <a href="http://www.google.com/cse"> Google Custom Search Engine</a> with a bunch of sites to make my life easier. Since it really worked for me, i bet it can work for some other people too, so why not open it for anyone who wants?</h3>
 	</li>
 </ul>
