moving name above menu

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <div id="cse-search-form" style="width: 100%;">Loading</div>
+
+<h3><a href="/faq.html#amazing">Where is that amazing site?</a></h3>
+
+<div id="cse" style="width:100%;"></div>
+
 <script src="http://www.google.com/jsapi" type="text/javascript"></script>
 <script type="text/javascript">
   google.load('search', '1');
@@ -12,6 +17,3 @@
     customSearchControl.draw('cse', options);
   }, true);
 </script>
-
-<div id="cse" style="width:100%;"></div>
-
