adding content div

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<div id="cse-search-form" style="width: 100%;">Loading</div>
+<div id="cse-search-form">Loading</div>
 
 <h3><a href="/faq.html#amazing">Where is that amazing site?</a></h3>
 
-<div id="cse" style="width:100%;"></div>
+<div id="cse"></div>
 
 <script src="http://www.google.com/jsapi" type="text/javascript"></script>
 <script type="text/javascript">
