adding email to footer.

--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,5 @@
 
-<ul>
+<ul id="faq">
 	<li>
 		<a href="#" name="submit"></a>
 		<h2>Why don't you have <span class="amazing">$INSERT_AMAZING_SITE_HERE</span> on the searcher?</h2>
