added entry to faq looking for designers :)

--- a/faq.html
+++ b/faq.html
@@ -16,6 +16,11 @@
 		<h3>You can send me sites, help me filter out bad content, spread the word about this site, donate money or any other thing you think can be useful. As usual, send me an email at agilesearcher@vidageek.net</h3>
 	</li>
 	<li>
+		<a href="#" name="ugly"></a>
+		<h2>Hey, this site is really ugly. Can't you improve how it looks?</h2>
+		<h3>I simply have almost no ability when it comes to web design. You are a designer and want to help this poor looking site? Send me an email at agilesearcher@vidageek.net</h3>
+	</li>
+	<li>
 		<a href="#" name="why"></a>
 		<h2>Why did you spend time on this?</h2>
 		<h3>I was creating a new course for <a href="http://www.adaptworks.com.br">AdaptWorks</a> and got really bored from looking for references on Google. I created a <a href="http://www.google.com/cse"> Google Custom Search Engine</a> with a bunch of sites to make my life easier. Since it really worked for me, i bet it can work for some other people too, so why not open it for anyone who wants?</h3>
