adding donation page

--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,7 @@
 	<li>
 		<a href="#" name="contribute"></a>
 		<h2>Hey, this is amazing! How can I contribute?</h2>
-		<h3>You can send me sites, help me filter out bad content, spread the word about this site, donate money or any other thing you think can be useful. As usual, send me an email at agilesearcher@vidageek.net</h3>
+		<h3>You can send me sites, help me filter out bad content, spread the word about this site, <a href="/donate.html">donate money</a> or any other thing you think can be useful. As usual, send me an email at agilesearcher@vidageek.net</h3>
 	</li>
 	<li>
 		<a href="#" name="ugly"></a>
